Add experimental JCEF based window that shows the debugger